#15 Fix visual problems (the width and wrapping of the "DB order" column in different situations)

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -150,6 +150,8 @@
         text-align:left;
 
         &_sortable {
+            white-space: nowrap;
+
             &:hover{
                 cursor: pointer;
             }
